# image_splitter_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: rgb2mono.launch  stereo_image_split.launch  stereo_image_split.launch.py
src/: rgb2mono.cpp  stereo_image_splitter.cpp  stereo_image_splitter_node.cpp
