<?xml version="1.0"?>
<package format="2">
  <name>image_splitter_ros</name>
  <version>0.0.1</version>
  <description>A package for splitting a single ROS image topic into multiple image topics.</description>

  <maintainer email="mohamedashraf123@gmail.com">Mohamed Abdelkader</maintainer>
  <license>MIT</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build and run-time dependencies -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv3</depend> <!-- Depending on your ROS distribution, this may just be 'opencv' -->

  <!-- Export tag is not needed unless you are creating a plugin -->
</package>
